# biosim4

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  NOTICE  README.md  lsan.supp
config/: biosim4.ini  biosim4.toml  test-video.ini
doc/: NAMESPACE_REFACTORING_PROGRESS.md
include/: basicTypes.h  configManager.h  genome-neurons.h  grid.h  indiv.h  logger.h  params.h  peeps.h  random.h  renderBackend.h  sensors-actions.h  signals.h  simulator.h
scripts/: BUILD_QUICK_REFERENCE.md  README.md  build.sh  clean-build.sh  quick-test.sh  run-hooks.sh  test-leaks.sh  test-video.sh
scripts/lib/: QUICK_REFERENCE.md  README.md  ui.sh
src/: CMakeLists.txt  analysis.cpp  basicTypes.cpp  basicTypes.h  cimgRenderBackend.cpp  configManager.cpp  configManager.cpp.bak  createBarrier.cpp  endOfGeneration.cpp  endOfSimStep.cpp  executeActions.cpp  feedForward.cpp  genome-compare.cpp  genome-neurons.h  genome.cpp  getSensor.cpp  grid.cpp  grid.h  imageWriter.cpp  imageWriter.h  indiv.cpp  indiv.h  main.cpp  params.cpp  params.h  peeps.cpp  peeps.h  random.cpp  random.h  raylibRenderBackend.cpp  sensors-actions.h  signals.cpp  signals.h  simulator.cpp  simulator.h  spawnNewGeneration.cpp  survival-criteria.cpp  unitTestBasicTypes.cpp  unitTestConnectNeuralNetWiringFromGenome.cpp  unitTestGridVisitNeighborhood.cpp  (+2 more)
src/core/agents/: executeActions.cpp  feedForward.cpp  getSensor.cpp  indiv.cpp  indiv.h  peeps.cpp  peeps.h
src/core/genetics/: genome-compare.cpp  genome-neurons.h  genome.cpp  genome_test.cpp  sensors-actions.h
src/core/simulation/: endOfGeneration.cpp  endOfSimStep.cpp  simulator.cpp  simulator.h  spawnNewGeneration.cpp  survival-criteria.cpp
src/core/world/: createBarrier.cpp  grid.cpp  grid.h  grid_test.cpp  signals.cpp  signals.h
src/io/config/: configManager.cpp  configManager.h
src/io/render/: raylibRenderBackend.cpp  renderBackend.h
src/io/video/: imageWriter.cpp  imageWriter.h  videoVerifier.cpp  videoVerifier.h
src/types/: basicTypes.cpp  basicTypes.h  params.cpp  params.h
src/utils/: analysis.cpp  analysis.h  logger.h  random.cpp  random.h
tests/: CMakeLists.txt  README.md  README_GTEST.md  testapp.py
tests/configs/: leak-test.ini  testapp.ini
tests/docs/: LEAK_TEST_QUICKSTART.md
tests/pylib/: config.py  include_tests.py  testlib.py  threadutils.py
tests/unit/: test_basic_types.cpp  test_grid_visit_neighborhood.cpp  test_neural_net_wiring.cpp  test_render_backend.cpp
tools/: graph-nnet.py  graphlog-genomeLength.gp  graphlog.gp
